edge-envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: usersvc_vhost
              domains: ["*"]
              routes:
              - match:
                  prefix: "/user"
                route:
                  cluster: usersvc
  clusters:
  - name: usersvc
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: usersvc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: usersvc
                port_value: 80
    # connect_timeout_ms: 250
    # type: static
    # lb_type: round_robin
    # hosts:
    # - 
    #   url: 'tcp://127.0.0.1:5000'
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8001
